/*
 * Copyright 2022 Thoughtworks, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

apply from: "https://raw.githubusercontent.com/gocd/gocd-plugin-gradle-task-helpers/master/helper.gradle?_=${(int) (new Date().toInstant().epochSecond / 60)}"

gocdPlugin {
  id = 'cd.go.authentication.passwordfile'
  pluginVersion = '2.2.0'
  goCdVersion = '22.1.0'
  name = 'Password File Authentication Plugin for GoCD'
  description = 'GoCD Authorization plugin for file based password authentication'
  vendorName = 'Thoughtworks, Inc.'
  vendorUrl = 'https://github.com/gocd/gocd-filebased-authentication-plugin'

  githubRepo {
    owner = System.getenv('GITHUB_USER') ?: 'bob'
    repo = 'gocd-filebased-authentication-plugin'
    token = System.getenv('GITHUB_TOKEN') ?: 'bad-token'
  }

  pluginProject = project(':gocd-filebased-authentication-plugin')

  prerelease = !"No".equalsIgnoreCase(System.getenv('PRERELEASE'))
  assetsToRelease = [
    project(':gocd-filebased-authentication-plugin').tasks.findByName('jar'),
    project(':gocdpasswd').tasks.findByName('jar')
  ]
}

allprojects {
  group = 'cd.go'
  version = gocdPlugin.fullVersion(project)
}

subprojects {
  java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
  }

  repositories {
    mavenCentral()
    mavenLocal()
  }
  dependencies {
    testImplementation platform('org.junit:junit-bom:5.12.2')
  }
}
